		* * * On your death it breaks (BS can fix it), you drop all Equipment (equipped, even the ring). And revive with 1 HP / 1 SP at the place of your death.
		* * * From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP [Komurka]
=========================

12/28
	* Added Kahai and Kaite spell times to skill_cast_db [Skotlex]
	* Removed Guilds Glory from guild skill tree [Komurka]
	* Moved some THQ items [Komurka]
	* Fixed duplicate the_sign [DracoRPG]
	* Fixed 2 name inconstitencies in item_db, thanks to Haplo [DracoRPG]
	* Added SC_Intravision to Sunshine Box and const list [DracoRPG]
	* Cleaned up even further, no conflict should occur now [DracoRPG]
12/27
	* Reverted Draco's cleanup [Komurka]
	* Small cleanup in item names [DracoRPG]
12/24
	* Changed Dokkaebi to Dokebi, by Harbin [Vicious]
	* Removed the item requirements for Twilight Pharmacy from
	  skill_require_db, since the requirements are acquired from produce_db.txt
	  [Skotlex]
	* Moved the sell price of the Tuxedo to the buy column (21500->43000) [Skotlex]
12/23
	* Corrected the Critical Race bonus of the Sabbath and cleaned up the
	  script of Morphicious' Hood. [Skotlex]
	* Added 1 sec cast time to Stone Curse [Komurka]
	* Added missing Amon Ra skills (he won't be so lame anymore) [Komurka]
	* Some fixes thx to Poki#3 [Komurka]
	* Desert Wolf Babe -> Baby Desert Wolf (iRO), thx to Poki#3 [Komurka]
	* Fixed the drops of RSX 0806, thanks to Poki#3 [MasterOfMuppets]
12/22
	* Added back the changebase script to Tuxedo. [Skotlex]
	* Changed the autospell chance of Lude card from 2% to 20%. [MasterOfMuppets]
	* Changed pest card to get its additional bonus if you have 77 int or [MasterOfMuppets]
	  higher instead of 77 and higher.
12/21
	* Item_DB update for Tuesday's kRO sakray update. Temp plugs. [Vicious]
	  - THQ Quest Items needs new item number!!!!

12/20
	* Set up some basic skill info for SKA/SKE/SWOO [Skotlex]