@@ -842,13 +842,13 @@
 //-- GD_HAWKEYES
 10009,0,0,300000,0
 //-- GD_BATTLEORDER
-10010,100,1000,60000,0
+10010,5000,1000,60000,300000
 //-- GD_REGENERATION
-10011,100,1000,60000,0
+10011,5000,1000,60000,300000
 //-- GD_RESTORE
-10012,100,1000,0,0
+10012,5000,1000,0,300000
 //-- GD_EMERGENCYCALL
-10013,100,1000,0,0
+10013,5000,1000,0,300000
 //==========================================
 
 
