@@ -548,8 +548,8 @@
 10007,0,0,0,0,0,1,0,no,0,16,0,none,0	//GD_GLORYWOUNDS#Wounds of Glory#
 10008,0,0,0,0,0,1,0,no,0,16,0,none,0	//GD_SOULCOLD#Cold Soul#
 10009,0,0,0,0,0,1,0,no,0,16,0,none,0	//GD_HAWKEYES#Sharp Eyes#
-10010,0,0,4,0,1,1,0,no,0,16,0,none,0	//GD_BATTLEORDER#Battle Orders#
-10011,0,0,4,0,1,3,0,no,0,16,0,none,0	//GD_REGENERATION#Regeneration#
-10012,0,0,4,0,1,1,0,no,0,16,0,none,0	//GD_RESTORE#Restore#
-10013,0,0,4,0,1,1,0,no,0,16,0,none,0	//GD_EMERGENCYCALL#Rally Guild#
+10010,0,0,4,0,1,1,0,yes,0,16,0,none,0	//GD_BATTLEORDER#Battle Orders#
+10011,0,0,4,0,1,3,0,yes,0,16,0,none,0	//GD_REGENERATION#Regeneration#
+10012,0,0,4,0,1,1,0,yes,0,16,0,none,0	//GD_RESTORE#Restore#
+10013,0,0,4,0,1,1,0,yes,0,16,0,none,0	//GD_EMERGENCYCALL#Rally Guild#
 10014,0,0,0,0,0,1,0,no,0,16,0,none,0	//GD_DEVELOPMENT#Extend Guild#
